--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
        <img id="point1"  src="https://umep9xrxazyy0jiw.public.blob.vercel-storage.com/imagenes/GALERIAA1-aY4ZTfW2eqvp8rVkFSyjtWWFwlT5cn.png"/>
         <img id="point2" src="https://umep9xrxazyy0jiw.public.blob.vercel-storage.com/imagenes/GALERIAA2-McROmQmzIUJzvmhxbWXDAis21gK8XS.png"/> 
         <img id="point3" src="https://umep9xrxazyy0jiw.public.blob.vercel-storage.com/imagenes/GALERIAA3-U1CxdHtpyxMQAwr7kGKRUrTTIOubVh.png"/> 
-        <img id="https://umep9xrxazyy0jiw.public.blob.vercel-storage.com/imagenes/GALERIAA4-11eEKHiyIy6y3hMb2KpSf0C07vJ6CU.png" /> 
+        <img id="point4"src="https://umep9xrxazyy0jiw.public.blob.vercel-storage.com/imagenes/GALERIAA4-11eEKHiyIy6y3hMb2KpSf0C07vJ6CU.png" /> 
         
         <!-- here we load the location icon we want to use and assign the id = "hotspot " --> 
         <img id="hotspot" src="https://umep9xrxazyy0jiw.public.blob.vercel-storage.com/imagenes/spot-N6RScLxkPWZRlzo9TktsgGyJJpRZcA.png"/>
