--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       
       <a-assets>
         <!-- here we load our 360 images and assign and id -->
-       <img id="point1"  src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg3zDXuV6MHIIolZBQHD47ueEgvCx-_rTZsebtKK5rccdGRn2bseLq_1of4i5LgCMubkxeuJmCSiMySfsGmHB1aEBZfEskwsKyxOt6lSiEnLkliUKR3dKeeU1qhf9D6-SLWhzZatvs8IfJ9H4pdHv0nT0BijsycA1WvkkId-yxSmkBi77C7O_npKlNmAYw/s7168/GALERIAA1.png" />
+       <img id="point1"  src="https://1.bp.blogspot.com/img/b/R29vZ2xl/AVvXsEg3zDXuV6MHIIolZBQHD47ueEgvCx-_rTZsebtKK5rccdGRn2bseLq_1of4i5LgCMubkxeuJmCSiMySfsGmHB1aEBZfEskwsKyxOt6lSiEnLkliUKR3dKeeU1qhf9D6-SLWhzZatvs8IfJ9H4pdHv0nT0BijsycA1WvkkId-yxSmkBi77C7O_npKlNmAYw/s7168/GALERIAA1.png" />
         <img id="point2" src="https://umep9xrxazyy0jiw.public.blob.vercel-storage.com/imagenes/GALERIAA2-McROmQmzIUJzvmhxbWXDAis21gK8XS.png"/> 
         <img id="point3" src="https://umep9xrxazyy0jiw.public.blob.vercel-storage.com/imagenes/GALERIAA3-U1CxdHtpyxMQAwr7kGKRUrTTIOubVh.png"/> 
         <img id="point4"src="https://umep9xrxazyy0jiw.public.blob.vercel-storage.com/imagenes/GALERIAA4-11eEKHiyIy6y3hMb2KpSf0C07vJ6CU.png" /> 
