--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       
       <a-assets>
         <!-- here we load our 360 images and assign and id -->
-       <img id="point1"  src="https://i.imgur.com/I7gUA0z.jpeg"/>
+       <img id="point1"  src="[img]https://i.imgur.com/I7gUA0z.jpeg[/img]"/>
         <img id="point2" src="https://umep9xrxazyy0jiw.public.blob.vercel-storage.com/imagenes/GALERIAA2-McROmQmzIUJzvmhxbWXDAis21gK8XS.png"/> 
         <img id="point3" src="https://umep9xrxazyy0jiw.public.blob.vercel-storage.com/imagenes/GALERIAA3-U1CxdHtpyxMQAwr7kGKRUrTTIOubVh.png"/> 
         <img id="point4"src="https://umep9xrxazyy0jiw.public.blob.vercel-storage.com/imagenes/GALERIAA4-11eEKHiyIy6y3hMb2KpSf0C07vJ6CU.png" /> 
