--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
       <a-assets>
         <!-- here we load our 360 images and assign and id -->
        <img id="point1"  src="https://i.imgur.com/I7gUA0z.jpeg"/>
-        <img id="point2" src="https://umep9xrxazyy0jiw.public.blob.vercel-storage.com/imagenes/GALERIAA2-McROmQmzIUJzvmhxbWXDAis21gK8XS.png"/> 
-        <img id="point3" src="https://umep9xrxazyy0jiw.public.blob.vercel-storage.com/imagenes/GALERIAA3-U1CxdHtpyxMQAwr7kGKRUrTTIOubVh.png"/> 
-        <img id="point4"src="https://umep9xrxazyy0jiw.public.blob.vercel-storage.com/imagenes/GALERIAA4-11eEKHiyIy6y3hMb2KpSf0C07vJ6CU.png" /> 
+        <img id="point2" src="https://i.imgur.com/WK1c0yP.jpeg"/> 
+        <img id="point3" src="https://i.imgur.com/ORIqaTz.jpeg"/> 
+        <img id="point4"src="https://i.imgur.com/Ac029Ah.jpeg" /> 
         
         <!-- here we load the location icon we want to use and assign the id = "hotspot " --> 
-        <img id="hotspot" src="https://umep9xrxazyy0jiw.public.blob.vercel-storage.com/imagenes/spot-N6RScLxkPWZRlzo9TktsgGyJJpRZcA.png"/>
+        <img id="hotspot" src="https://i.imgur.com/ROxjVB2.png"/>
       </a-assets>
       
       <!-- Link 360 images to hotspots -->
